globus-ftp-control (6.10-1+gt6.@distro@) @distro@; urgency=low


 -- Globus Toolkit <support@globus.org>  Mon, 18 Apr 2016 22:59:20 -0400

globus-ftp-control (6.9-1+gt6.@distro@) @distro@; urgency=low

  * Use prelinks for tests so that they run on El Capitan

 -- Globus Toolkit <support@globus.org>  Mon, 18 Apr 2016 15:03:40 -0400

globus-ftp-control (6.8-1+gt6.@distro@) @distro@; urgency=low

  * GT-594: enable keepalives

 -- Globus Toolkit <support@globus.org>  Fri, 23 Oct 2015 18:15:19 -0500

globus-ftp-control (6.7-1+gt6.@distro@) @distro@; urgency=low

  * Fix old-style function definitions
  * Fix scope of socklen variable

 -- Globus Toolkit <support@globus.org>  Tue, 14 Jul 2015 20:05:11 -0400

globus-ftp-control (6.6-1+gt6.@distro@) @distro@; urgency=low

  * Fix undefined return code

 -- Globus Toolkit <support@globus.org>  Fri, 09 Jan 2015 15:25:32 -0500

globus-ftp-control (6.5-1+gt6.@distro@) @distro@; urgency=low

  * Better fix for testing on localhost

 -- Globus Toolkit <support@globus.org>  Fri, 09 Jan 2015 13:43:35 -0500

globus-ftp-control (6.4-1+gt6.@distro@) @distro@; urgency=low

  * Missing check for netinet/tcp.h

 -- Globus Toolkit <support@globus.org>  Thu, 08 Jan 2015 16:18:35 -0500

globus-ftp-control (6.3-1+gt6.@distro@) @distro@; urgency=low

  * fix memleak

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 13:50:28 -0500

globus-ftp-control (6.2-1+gt6.@distro@) @distro@; urgency=low

  * Use localhost for tests

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 10:00:25 -0500

globus-ftp-control (6.1-2+gt6.@distro@) @distro@; urgency=low

  * Add build dependency on OpenSSL

 -- Globus Toolkit <support@globus.org>  Wed, 29 Oct 2014 10:31:58 -0400

globus-ftp-control (6.1-1+gt6.@distro@) @distro@; urgency=low

  * GT-477: Tracking TCP retransmits on the GridFTP server

 -- Globus Toolkit <support@globus.org>  Tue, 28 Oct 2014 17:11:55 -0500

globus-ftp-control (5.12-1+gt6.@distro@) @distro@; urgency=low
