@@ -1,3 +1,9 @@
+globus-ftp-control (7.0-1+gt6.@distro@) @distro@; urgency=low
+
+  * add ability to request ordered data on reads
+
+ -- Globus Toolkit <support@globus.org>  Thu, 14 Jul 2016 11:26:04 -0500
+
 globus-ftp-control (6.10-1+gt6.@distro@) @distro@; urgency=low
 
 
